// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders CSF2Secondary story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      Global Decorator
      <br />
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        type="button"
      >
        Children coming from story args!
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders CSF2StoryWithLocale story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      Global Decorator
      <br />
      <p>
        locale: 
        en
      </p>
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        type="button"
      >
        Hello!
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders CSF2StoryWithParamsAndDecorator story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      Global Decorator
      <br />
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        type="button"
      >
        foo
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders CSF3Button story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      Global Decorator
      <br />
      <button
        class="storybook-button storybook-button--medium storybook-button--secondary"
        type="button"
      >
        foo
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders CSF3ButtonWithRender story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      Global Decorator
      <br />
      <div>
        <p
          data-testid="custom-render"
        >
          I am a custom render function
        </p>
        <button
          class="storybook-button storybook-button--medium storybook-button--secondary"
          type="button"
        >
          foo
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders CSF3InputFieldFilled story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      Global Decorator
      <br />
      <input
        data-testid="input"
      />
      <br />
      <button>
        I am 
        clicked
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders CSF3Primary story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      Global Decorator
      <br />
      <button
        class="storybook-button storybook-button--large storybook-button--primary"
        type="button"
      >
        foo
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders Modal story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      Global Decorator
      <br />
      <button
        id="openModalButton"
      >
        Open Modal
      </button>
    </div>
  </div>
  <div
    id="modal-root"
  >
    <div
      role="dialog"
      style="position: fixed; top: 20%; left: 50%; transform: translate(-50%, -20%); background-color: white; padding: 20px; z-index: 1000; border: 2px solid black; border-radius: 5px;"
    >
      <div
        style="margin-bottom: 10px;"
      >
        <p>
          This is a modal!
        </p>
      </div>
      <button>
        Close
      </button>
    </div>
  </div>
</body>
`;

exports[`Renders WithLoader story 1`] = `
<body>
  <div>
    <div
      data-testid="global-decorator"
    >
      Global Decorator
      <br />
      <div>
        <div
          data-testid="loaded-data"
        >
          loaded data
        </div>
        <div
          data-testid="mock-data"
        >
          mockFn return value
        </div>
      </div>
    </div>
  </div>
</body>
`;
